Replace to new JVM option. (#1212)